Fix main logo on index (mobile device too small) / Fix without breaking other images

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -224,7 +224,7 @@ html {
   
   img {
     vertical-align: middle;
-    
+    max-width: 100%;
     display: inline-block;
   }
   
